--- a/war/src/main/webapp/index.html
+++ b/war/src/main/webapp/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-	<meta http-equiv="refresh" content="0; url=https://vhost.safesend.se:8443/admin/index.html"/>
 	<meta charset="UTF-8">
-	<title></title>
+	<meta http-equiv="refresh" content="0; url=/index.html">
+	<script type="text/javascript">
+		window.location.href = "/index.html"
+	</script>
+	<title>Page Redirection</title>
 </head>
 <body>
-
+If you are not redirected automatically, follow the <a href='/index.html'>link to index-page</a>
 </body>
 </html>
